# ngr-services-spider

./: .dockerignore  .gitignore  Dockerfile  README.md  jq-filter-for-themes.sh  mypy.ini  pyproject.toml  script.sh  setup.cfg
.github/workflows/: build-and-publish-image.yml  publish-pypi.yml
examples/: generate-pdok-services-plugin-config-ogcapi.sh  generate-pdok-services-plugin-config.sh  generate-pdok-services-plugin-config2.sh  service.json
ngr_spider/: cli.py  constants.py  csw_client.py  decorators.py  models.py  ogc_api_features.py  ogc_api_tiles.py  servicemetadata.py  util.py
