[project]
name = "ngr-services-spider"
description = "test"
keywords = ["ngr", "csw", "pdok", "ows"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]
readme = { file = "./README.md", content-type = "text/markdown" }
dependencies = [
    "azure-storage-blob >= 12.14.1",
    "dataclass-wizard >= 0.22.2",
    "jq >= 1.3.0",
    "lxml >= 4.9.1",
    "OWSLib >= 0.28.1",
    "requests >= 2.25.0",    
]
requires-python = ">=3.10.6"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "mypy", "autoflake", "isort"]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45", 
    "setuptools-git-versioning==1.13.1",
    "wheel==0.38.4"
]

[project.scripts]
ngr-spider = "ngr_spider.cli:main"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
include = ["ngr_spider*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)